Добавление роутов. Добавление страниц авторизации, поиска и профиля. Добавление компонента layout и компонента sidebar. Стилизация авторизации

--- a/src/app/common-ui/profile-card/profile-card.component.html
+++ b/src/app/common-ui/profile-card/profile-card.component.html
@@ -1,7 +1,11 @@
 @if (profile) {
   <div class="profile-card">
     <div class="avatar-name">
-      <img src="/assets/images/ryan.png" alt="avatar" class="profile-card__avatar">
+      <img 
+        [src]="profile.avatarUrl | imgUrl"
+        [alt]="profile.lastName"
+        class="profile-card__avatar"
+      >
   
       <div class="profile-card__name">
         <strong class="h6">
