--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,11 @@
 @import 'fonts';
+@import 'margins';
 
 :root {
   --dark-color: #000;
   --light-color: #FFF;
   --primary-color: #AE7AFF;
+  --grey-color: #5F646D;
 }
 
 *,
@@ -16,7 +18,7 @@
 
 body {
   font-family: 'JetBrains Mono', sans-serif;
-  background: var(--dark-color);
+  background: var(--dark-color) url(/assets/images/bg.png) center/cover no-repeat;
   color: var(--light-color);
 }
 
@@ -39,6 +41,32 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 24px;
+  width: 100%;
+  cursor: pointer;
+  border-radius: 4px;
+  border-right: 1px solid var(--dark-color);
+}
+
+.btn-shadow {
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -4px;
+    right: -4px;
+    background: var(--grey-color);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    border-radius: 4px;
+  }
+}
+
+.h1 {
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 800;
 }
 
 .h6 {
@@ -50,4 +78,25 @@ body {
 .subtitle {
   font-size: 14px;
   line-height: 20px;
+}
+
+.tt-control-label {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+  display: block;
+}
+
+.tt-input {
+  margin-top: 8px;
+  width: 100%;
+  display: block;
+  border: 1px solid var(--light-color);
+  border-radius: 4px;
+  padding: 12px 20px;
+  background: var(--dark-color);
+  font-size: 14px;
+  line-height: 21px;
+  font-family: 'JetBrains Mono', sans-serif;
+  color: var(--light-color);
 }
