--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -3,5 +3,7 @@
   grid-template-columns: 440px 1fr;
   height: 100dvh;
   align-items: center;
-  margin: 0 5%;
+  margin: 0 auto;
+  grid-gap: 232px;
+  width: fit-content;
 }
