--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
   --primary-color: #AE7AFF;
   --grey-color: #5F646D;
   --light-transparent: #FFFFFFBF;
+  --dark-hover-color: #161616;
 }
 
 *,
@@ -104,4 +105,11 @@ body {
   line-height: 21px;
   font-family: 'JetBrains Mono', sans-serif;
   color: var(--light-color);
+}
+
+.medium-text {
+  font-family: 'JetBrains Mono', sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
 }
